@@ -1,4 +1,5 @@
  * Partagez un domaine Web pour rechercher automatiquement une entrée
+ * Icône de groupe par défaut pour une nouvelle entrée
  * Meilleure reconnaissance de remplissage automatique
  * Correction de l'entrée non supprimée visuellement dans la recherche
  * Correction du dialogue de chargement bloqué
