@@ -1,5 +1,6 @@
 KeePassDX(2.6)
  * Share a web domain to automatically search for an entry
+ * Default group icon for a new entry
  * Better autofill recognition
  * Fix entry not visually deleted in search
  * Fix hanged loading dialog
